templates/piggy-webhooks_template.yaml
---
# Source: piggy-webhooks/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-piggy-webhooks
  labels:
    helm.sh/chart: piggy-webhooks-0.6.1
    app.kubernetes.io/name: piggy-webhooks
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.6.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: piggy-webhooks
    app.kubernetes.io/instance: release-name
---
# Source: piggy-webhooks/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-piggy-webhooks
  labels:
    helm.sh/chart: piggy-webhooks-0.6.1
    app.kubernetes.io/name: piggy-webhooks
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.6.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: piggy-webhooks
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: piggy-webhooks
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-piggy-webhooks
      securityContext:
        fsGroup: 65534
        runAsUser: 10001
      containers:
        - name: piggy-webhooks
          securityContext:
            {}
          image: "ghcr.io/kongz/piggy-webhooks:0.6.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: 8443
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: 8443
          resources:
            {}
          volumeMounts:
            - mountPath: /certs
              name: certs
      priorityClassName: system-cluster-critical
      volumes:
        - name: certs
          secret:
            defaultMode: 420
            secretName: release-name-piggy-webhooks-webhook-tls
---
# Source: piggy-webhooks/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-piggy-webhooks
webhooks:
  - name: release-name-piggy-webhooks.default.svc
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: release-name-piggy-webhooks
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQekNDQWllZ0F3SUJBZ0lRWllDL3ZQMGZwRyt3dVVJTDNMRmhmVEFOQmdrcWhraUc5dzBCQVFzRkFEQXAKTVNjd0pRWURWUVFERXg1eVpXeGxZWE5sTFc1aGJXVXRjR2xuWjNrdGQyVmlhRzl2YTNNdFkyRXdJQmNOTWpRdwpOVEUxTURnd05UQXpXaGdQTWpFeU5EQTBNakV3T0RBMU1ETmFNQ2t4SnpBbEJnTlZCQU1USG5KbGJHVmhjMlV0CmJtRnRaUzF3YVdkbmVTMTNaV0pvYjI5cmN5MWpZVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0MKQVFvQ2dnRUJBUGpDRHRhNGVXU2VhUU04OE5ZRVVaekxzZDllaTJmWFNPdHVuSVo2QWROcHg4bXdCUjZjQTFodwpxeXdXOHBlU3B6 [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods"]
    failurePolicy: Ignore
    sideEffects: None
---
# Source: piggy-webhooks/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-piggy-webhooks-test-connection"
  labels:
    helm.sh/chart: piggy-webhooks-0.6.1
    app.kubernetes.io/name: piggy-webhooks
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.6.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-piggy-webhooks:443']
  restartPolicy: Never
